Fixed some spacing on Enter page. Cleaned up the styling of the light/dark toggle section.

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   margin: 0 auto;
 }
 
+
+
 /* HomepageButtons - mobile-first (1-wide) */
 div#home-buttons-container {
   display: flex;
@@ -9,6 +11,7 @@ div#home-buttons-container {
   justify-content: center;
   align-content: center;
   margin: auto 10%;
+  margin-bottom: 3rem;
 }
 
 /* HomepageButtons layout - tablet (2-wide) */
@@ -16,7 +19,7 @@ div#home-buttons-container {
   div#home-buttons-container {
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 0 auto;
+    margin: 0 auto 3rem auto;
   }
   .home-column {
     flex-basis: 38%;
@@ -28,6 +31,7 @@ div#home-buttons-container {
 @media screen and (min-width: 1024px) {
   div#home-buttons-container {
     flex-direction: row;
+    margin-bottom: 3rem;
   }
   .home-column {
     flex-basis: 20%;
